--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "ejs": "^2.4.2",
     "jade": "~1.11.0",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.8",
