--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+
     "start": "node ./bin/www"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "node-sass": "^3.7.0",
+    "uglifyjs": "^2.4.10",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
