--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-
-    "start": "node ./bin/www"
+    "go": "npm run watch && npm run dev",
+    "deploy": "git push origin master && git push heroku master",
+    "dev": "NODE_ENV=development node --use_strict server.js",
+    "name-project": "echo \"\\033[04mPlease enter project name (no spaces): \\033[0m\\033[32m\" && read project_name && sed '1 d' ./server.js > temp && mv temp ./server.js && echo \"global.PROJECT_NAME = '$project_name'\" | cat - server.js > temp && mv temp server.js",
+    "killmongo": "bash kill.sh mongo",
+    "postinstall": "touch ./config/secrets.js",
+    "start": "node --use_strict server.js",
+    "stop": "bash kill.sh",
+    "watch": "npm run watch-js && npm run watch-css && echo '\n\n===== watching js and scss files in src/, writing changes to dist/ =====\n\n'&",
+    "watch-js": "./node_modules/.bin/watchify src/js/app.js --debug --verbose --transform babelify -o public/javascripts/main.js&",
+    "watch-css": "./node_modules/.bin/node-sass -w --output-style compressed src/sass/main.scss public/stylesheets/style.css&",
+    "init-dev": "npm run name-project && npm install"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
